// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v30;

import "com/digitalasset/canton/crypto/v30/crypto.proto";
import "google/protobuf/wrappers.proto";
import "scalapb/scalapb.proto";

message SignedContent {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  google.protobuf.BytesValue content = 1;
  repeated com.digitalasset.canton.crypto.v30.Signature signatures = 2;
  google.protobuf.Int64Value timestamp_of_signing_key = 3; // in microseconds of UTC time since Unix epoch
}
